# sbv2-web

./: .gitignore  CLAUDE.md  README.md  deno.json
.claude/: ACTIVE_DESIGN.md
.github/workflows/: ci.yml  release.yml
docs/: aivmx-interface.md  benchmark.md  known-issues.md  license-audit.md  limitations.md  migration-0.2.md  migration-0.3.md
docs/decisions/: 0001-frontend-synth-responsibility-split.md  0002-runtime-agnostic-core-injected-backends.md  0003-synthinput-public-contract.md  0004-release-lifecycle-contract.md  0005-shared-deberta-extractor.md
examples/browser/: components.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/cli/: synthesize_node.ts
scripts/: bump.ts  config_version.ts  release_tag.test.ts  release_tag.ts  verify_tag.ts  version_sync.test.ts
src/: core.ts  mod.ts
src/assets/: deberta.ts
src/node/: mod.ts  model_adapter.ts
src/runtime/: adapter_core.test.ts  adapter_core.ts  adapter_types.ts  aivm_manifest.test.ts  aivm_manifest.ts  aivmx_meta.test.ts  aivmx_meta.ts  deberta_extractor.test.ts  deberta_extractor.ts  json_expect.ts  npy.test.ts  npy.ts  silence.test.ts  silence.ts  synthesize.ts  tensor_build.test.ts  tensor_build.ts  validate_input.test.ts  validate_input.ts  wav.test.ts  wav.ts
src/testing/: mock_backend.ts  npy_fixture.ts  onnx_meta_fixture.ts
src/text/: symbols.ts  (+9 more)
tools/model-tools/: README.md  pyproject.toml
tools/model-tools/scripts/: _model.py  _paths.py  _quant_common.py  prepare_hf_deberta.py  quantize_aivmx.py  quantize_deberta.py  quantize_deberta_int4.py  synth_aivmx.py
(+10 files in other folders)
