[project]
name = "sbv2-web-model-tools"
version = "0.1.0"
description = "Model conversion, quantization, smoke tests, and HuggingFace packaging helpers for @hdae/sbv2-web"
requires-python = "==3.11.*"
dependencies = [
    "huggingface-hub>=0.24",
    "numpy<2",
    "onnx>=1.15",
    "onnxruntime>=1.17",
    "onnx-ir>=0.2",
    "aivmlib>=1.1",
    "soundfile>=0.12",
    "setuptools<81",
    "style-bert-vits2==2.5.0",
    "torch==2.5.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
